--- a/covid19.html
+++ b/covid19.html
@@ -21,7 +21,7 @@
             <header>
                 <h2>COVID-19 Project</h2>
             </header>
-            <p>A project to track back how the COVID-19's first case appeared, how the world confronted the pandemic, and the vaccination for coronavirus emerged. I focus on the top 5 countries I'm interested in: Vietnam, China, Germany, Finland, and the United States.</p>
+            <p class="fixP"> <strong>A project to track back how the COVID-19's first case appeared, how the world confronted the pandemic, and the vaccination for coronavirus emerged. I focus on the top 5 countries I'm interested in: Vietnam, China, Germany, Finland, and the United States.</strong></p>
             <a href="https://public.tableau.com/app/profile/uyen.le6817/viz/CovidDashboard_16903039784920/Dashboard1"class="link" target="_blank">Tableau</a>
         </div>
     </article>
@@ -29,25 +29,24 @@
     <article class="wrapper style2">
         <div class="container">
             <header>
-                <h2>First: Data Cleaning and Preparation</h2>
+                <p class="fixP" >Using SQL Server Management Studio (SSMS), I clean the data and create the necessary views and tables.</p>
             </header>
-            <p>Using SQL Server Management Studio (SSMS), I clean the data and create the necessary views and tables.</p>
+            <div class="image fit">
+                <img src="images/picCovid01.jpg" alt="" />
+                <img src="images/picCovid02.jpg" alt="" />
+            </div>
             <!--<span class="image fit"><img src="images/picCovid01.jpg" alt="" /></span>-->
         </div>
     </article>
 
-    <div class="image fit">
-        <img src="images/picCovid01.jpg" alt="" />
-        <img src="images/picCovid02.jpg" alt="" />
-    </div>
+    
 
     <!-- Visualization -->
     <article class="wrapper style2">
         <div class="container">
             <header>
-                <h2>Visualization and Dashboard</h2>
+                <p class="fixP">After all the essential calculations, I connect to Tableau Desktop to visualize the data and create a dashboard. The final dashboard is published to Tableau Public.</p>
             </header>
-            <p>After all the essential calculations, I connect to Tableau Desktop to visualize the data and create a dashboard. The final dashboard is published to Tableau Public.</p>
             <span class="image fit"><img src="images/picCovid03.jpg" alt="" /></span>
         </div>
     </article>
